--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       <h1 class="project-name">RT Middleware REST API Component</h1>
       <h2 class="project-tagline">RT-Middleware REST API component</h2>
       <a href="https://github.com/rachwal/RTM-REST-API" class="btn">View on GitHub</a>
-      <a href="https://github.com/rachwal/RTM-REST-API/zipball/master" class="btn">Download .zip</a>
-      <a href="https://github.com/rachwal/RTM-REST-API/tarball/master" class="btn">Download .tar.gz</a>
+      <a href="https://github.com/rachwal/RTM-REST-API/zipball/master" class="btn">Download Source</a>
+        <a href="http://openrtc.org/pub/download/RTM-REST-API.zip" class="btn">Download Build</a>
     </section>
 
     <section class="main-content">
